example/invalid/syntaxErr/function/functionMissingType.wacc
# program missing return wacc.type of function

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  f() is
    return 0 
  end
  int x = call f()
end

